# susanoo

./: .gitignore  Cargo.toml  README.md  eth_predictor.r1cs  eth_predictor.sym  eth_price_predictor.pth  eth_price_predictor_input.json  model1_price_input.json  package-lock.json  package.json  proof.json  public.json  tsconfig.json
circuits/: Poly.circom  model1_price_test.circom  model_weights.json  scaler_params.json  test_input.json  util.circom
models/: model1_price_input.json  model1_price_training.py  sol_price_model.pth
scripts/: compile_circuit.sh  fetchSolData.ts  generate_and_verify_proof.js  solanaActionAgent.ts  solanaHelpers.ts  solana_action_agent.py  solana_helpers.py  verify_model1_proof.js
src/: lib.rs  verifying_key.rs
