[package]
name = "sol-price-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git" }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.14", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]